@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-13T08:21:34Z",
-  "count_outdated" : 513,
-  "uniques_outdated" : 297,
-  "count" : 540,
+  "timestamp" : "2022-09-13T16:22:40Z",
+  "count_outdated" : 515,
+  "uniques_outdated" : 298,
+  "count" : 543,
   "uniques" : 313,
   "clones" : [
-    {
-      "timestamp": "2022-08-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-31T00:00:00Z",
       "count": 3,
@@ -91,8 +84,8 @@
     },
     {
       "timestamp": "2022-09-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
