@@ -1,12 +1,7 @@
 {
-  "count": 27,
+  "count": 28,
   "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-08-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-31T00:00:00Z",
       "count": 3,
@@ -64,7 +59,7 @@
     },
     {
       "timestamp": "2022-09-13T00:00:00Z",
-      "count": 1,
+      "count": 3,
       "uniques": 1
     }
   ]
