@@ -1,3 +1,11 @@
+2022-09-13T16:22:40Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3046721829
+* notice: last 14d: unq all: 5 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 297 513 / 313 540
+* notice: next accum: outdated-unq outdated-all / unq all: 298 515 / 313 543
+* notice: prev exec diff / last date diff / accum: unq all: +0 +2 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [2022-08-30] / [2022-09-13]
+
 2022-09-13T08:21:34Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3043463557
 * notice: last 14d: unq all: 5 27
